# UniVM-Core-Constant-Round-Atomic-Cross-Chain-Invocation-Across-Heterogeneous-Smart-Contract-Runtimes

./: README.md  hardhat.atom-bc1.config.ts  hardhat.atom-bc2.config.ts  hardhat.atom-bc3.config.ts  hardhat.config.ts  hardhat.gpact-bc1.config.ts  hardhat.gpact-bc2.config.ts  hardhat.gpact-bc3.config.ts  hardhat.integratex-bc1.config.ts  hardhat.integratex-bc2.config.ts  hardhat.integratex-bc3.config.ts  hardhat.xsmart-bc1.config.ts  hardhat.xsmart-bc2.config.ts  hardhat.xsmart-bc3.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.scripts.json
benchmark-results/: atom-1b-d2.json  atom-1b-d3.json  atom-1b-d4.json  atom-1b-d5.json  atom-rq1c-full-20260502-d2-30.json  atom-rq1c-full-20260502-d3-30.json  atom-rq1c-full-20260502-d4-30.json  atom-rq1c-full-20260503-d5-30.json  atom-write-50.json  gpact-1b-d2.json  gpact-1b-d3.json  gpact-1b-d4.json  gpact-1b-d5.json  gpact-50.json  gpact-rq1c-full-20260502-d2-30.json  gpact-rq1c-full-20260502-d3-30.json  gpact-rq1c-full-20260502-d4-30.json  gpact-rq1c-full-20260503-d5-30.json  integratex-1b-d2.json  integratex-1b-d3.json  integratex-1b-d4.json  integratex-1b-d5.json  integratex-50.json  xsmart-1a.json  xsmart-1b-d2.json  xsmart-1b-d3.json  xsmart-1b-d4.json  xsmart-1b-d5.json  xsmart-zkmechanism-20260503-d2-30-combined.json  xsmart-zkmechanism-20260503-d3-30.json  xsmart-zkmechanism-20260503-d4-30.json  xsmart-zkmechanism-20260503-d5-30.json
benchmark-results/rq3/: concurrency-atom-d3-c1.json  concurrency-atom-d3-c10.json  concurrency-atom-d3-c2.json  concurrency-atom-d3-c4.json  concurrency-atom-d3-c6.json  concurrency-atom-d3-c8.json  (+81 more)
configs/: network-config.yaml  vm1-network.env  vm2-network.env  vm3-network.env  vm4-network.env
docker/: xsmart-fabric-sim.Dockerfile  xsmart-ink-builder.Dockerfile  xsmart-substrate-contracts-node.Dockerfile
figures/: Architect.drawio.xml
relayer/: go.mod  go.sum
scripts/: common.ts  hardhat-config-factory.ts  setup-all.cjs
tools/ubtl/cli/: Cargo.toml
tools/ubtl/cli/src/: main.rs
zk/: state-import.example.json
zk/risc0/xsmart-state-guest/: Cargo.toml
zk/risc0/xsmart-state-guest/src/: main.rs
zk/risc0/xsmart-state-host/: Cargo.toml
zk/risc0/xsmart-state-host/src/: main.rs
zk/sp1/xsmart-state-guest/: Cargo.toml
zk/sp1/xsmart-state-guest/src/: main.rs
zk/sp1/xsmart-state-host/: Cargo.toml
zk/sp1/xsmart-state-host/src/: main.rs
(+437 files in other folders)
