[package]
name = "xsmart-risc0-state-guest"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
alloy-primitives = { version = "0.8", default-features = false }
alloy-sol-types = { version = "0.8", default-features = false }
risc0-zkvm = { version = "3.0", default-features = false, features = ["std"] }
serde = { version = "1", default-features = false, features = ["derive"] }
sha2 = { version = "0.10", default-features = false }
ed25519-dalek = { version = "2", default-features = false, features = ["alloc", "fast"] }
p256 = { version = "0.13", default-features = false, features = ["ecdsa", "arithmetic"] }
