[package]
name = "xsmart-risc0-state-host"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
alloy-primitives = "0.8"
alloy-sol-types = "0.8"
anyhow = "1"
hex = "0.4"
risc0-zkvm = { version = "3.0", features = ["prove"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
