[package]
name = "xsmart-sp1-state-guest"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
alloy-sol-types = "0.8"
alloy-primitives = "0.8"
sp1-zkvm = "6"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
ed25519-dalek = { version = "2", default-features = false, features = ["alloc", "fast"] }
p256 = { version = "0.13", default-features = false, features = ["ecdsa", "arithmetic"] }
