[package]
name = "xsmart-sp1-state-host"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
alloy-primitives = "0.8"
alloy-sol-types = "0.8"
anyhow = "1"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sp1-sdk = { version = "6", features = ["blocking"] }
